# GOC

./: .gitignore  README.md  pyproject.toml
docs/: canary-determinism-policy.json  canary-determinism-quarantine.json  canary-guardrails-policy.json  incident-drill-automation-policy.json  load-profile-catalog.json  oncall-alert-routing-policy.json  production-runbook.md  release-candidate-rollout-policy.json  release-gate-artifact-trust-policy.json  release-gate-chaos-matrix-policy.json  release-gate-deploy-rehearsal-policy.json  release-gate-evidence-attestation-policy.json  release-gate-evidence-freshness-policy.json  release-gate-hypercare-policy.json  release-gate-performance-budget-policy.json  release-gate-performance-history-baseline.json  release-gate-post-cutover-finalization-policy.json  release-gate-post-release-continuity-policy.json  release-gate-post-release-watch-policy.json  release-gate-production-cutover-policy.json  release-gate-production-sustainability-certification-policy.json  release-gate-registry.json  release-gate-registry.lock.json  release-gate-rollback-trigger-integrity-policy.json  release-gate-slo-burn-rate-v2-policy.json  release-gate-steady-state-certification-policy.json  rto-rpo-assertion-policy.json  stability-canary-baseline.json  watchdog-rehearsal-mttr-policy.json
goal_ops_console/: __init__.py  config.py  database.py  desktop.py  event_bus.py  execution_layer.py  failure_intelligence.py  invariant_monitor.py  main.py  models.py  observability.py  planner.py  runtime_guard.py  scheduler.py  services.py  state_manager.py  stubs.py  (+2 more)
(+236 files in other folders)
