[project]
name = "goal-ops-console"
version = "0.1.0"
description = "Supervised MVP for the Goal Ops Console."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = ["pytest-cache-files-*"]
